Рефакторинг кода на r2dbc